--- a/public/setup-database.html
+++ b/public/setup-database.html
@@ -142,6 +142,7 @@ Przykład:
     </div>
 
     <script>
+        const API_BASE = 'https://eltron-drums-system.vercel.app';
         // Check current database status
         async function checkStatus() {
             const statusBtn = document.getElementById('statusBtn');
@@ -152,7 +153,7 @@ Przykład:
             statusResult.innerHTML = '<div class="text-blue-600">Sprawdzanie stanu bazy danych...</div>';
 
             try {
-                const response = await fetch('/api/health');
+                const response = await fetch(`${API_BASE}/api/health`);
                 const data = await response.json();
 
                 if (response.ok) {
@@ -228,7 +229,7 @@ Przykład:
             try {
                 console.log('🚀 Starting database setup...');
 
-                const response = await fetch('/api/setup-database', {
+                const response = await fetch(`${API_BASE}/api/setup-database`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -454,7 +455,7 @@ Przykład:
             try {
                 console.log('🚀 Starting data import...');
 
-                const response = await fetch('/api/migrate', {
+                const response = await fetch(`${API_BASE}/api/migrate`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
